selfhost/test/typechecker/bindingdecl/error_uninitialized_val_destructured_tuple_with_annotation.out
Error at %FILE_NAME%:1:5
Missing initializer for immutable variables
  |  val (a, b): (Int, Float)
         ^
